add shop features

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,16 @@ services:
       MSSQL_SA_PASSWORD: "Password@1"
     ports:
       - "1431:1433"
+    volumes:
+      - sql-data:/var/opt/mssql
+  redis:
+    image: 'redis:latest'
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+
+volumes:
+  sql-data:
+  redis-data:
