--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,20 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1,1431;Database=skinet;User Id=SA;Password=Password@1;TrustServerCertificate=true",
+    "redis": "127.0.0.1"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://localhost:7054",
+        "Certificate": {
+          "Path": "localhost.pem",
+          "KeyPath": "localhost-key.pem"
+        }
+      }
+    }
   }
 }
